--- a/assets/index.html
+++ b/assets/index.html
@@ -14,14 +14,14 @@
 
     <header class="clearfix">
 
-        <div class="logo">
+        <div class="logo float">
 
             <img src="../assets/img/logo.svg" alt="">
 
         </div>
 
 
-        <div class="main_menu">
+        <div class="main_menu float">
 
             <ul>
                 <li><a href="">Il Metodo</a></li>
@@ -33,7 +33,7 @@
         </div>
 
 
-        <div class="side_menu">
+        <div class="side_menu float">
 
             <ul>
                 <li><a href="">Diventa un tutor</a></li>
@@ -62,6 +62,35 @@
 
     <main>
         
+        <div class="clearfix columns">
+
+            <aside class="float">
+                <img src="../assets/img/profile.svg" class="col_img" alt="">
+                <h3>Piano formativo configurato sul proprio livello</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque autem recusandae aut rem consequuntur facere sequi suscipit ipsa a provident? Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, velit?
+                </p>
+            </aside>
+
+            <article class="main_article float">
+
+                <img src="../assets/img/computer.svg" class="col_img" alt="">
+                <h3>Affiancamento costante del tutor</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque autem recusandae aut rem consequuntur facere sequi suscipit ipsa a provident? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi pariatur earum ea ad? Fuga eveniet dolorum consectetur, accusamus corporis nemo magni inventore commodi qui vero dolorem, fugiat totam eius alias. 
+                </p>
+
+            </article>
+
+            <aside class="float">
+                <img src="../assets/img/doc.svg" class="col_img" alt="">
+                <h3>Monitora i tuoi progressi costantemente</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque autem recusandae aut rem consequuntur facere sequi suscipit ipsa a provident? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, amet!</p>
+            </aside>
+
+        </div>
+
+        <hr>
 
     </main>
 
