--- a/assets/index.html
+++ b/assets/index.html
@@ -12,8 +12,10 @@
 
 <body>
 
+    <!-- header -->
     <header class="clearfix">
 
+        <!-- nav bar -->
         <div class="logo float">
 
             <img src="../assets/img/logo.svg" alt="">
@@ -42,7 +44,9 @@
             </ul>
 
         </div>
+        <!-- //nav bar -->
 
+        <!-- hero image and floating title -->
         <div class="sec_title"></div>
             <div class="floating_title">
                 <h1>Scegli l'inglese studiato per i professionisti</h1>
@@ -50,8 +54,12 @@
             </div>
         </div>
 
-    </header>
+        <!-- /hero image and floating title -->
 
+    </header>
+    <!-- /header -->
+
+    <!-- gray bar section -->
     <section class="graybar_box">  
         <div class="graybar_cont">
             <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
@@ -59,9 +67,12 @@
         </div>
         
     </section>
+    <!-- /gray bar section -->
 
+    <!-- main -->
     <main>
         
+        <!-- columns -->
         <div class="clearfix columns">
 
             <aside class="float">
@@ -89,10 +100,12 @@
             </aside>
 
         </div>
+        <!-- /clumns -->
 
         <hr>
 
     </main>
+
 
 </body>
 
