second row of columns complete

--- a/assets/index.html
+++ b/assets/index.html
@@ -72,7 +72,7 @@
     <!-- main -->
     <main>
         
-        <!-- columns -->
+        <!-- three columns -->
         <div class="clearfix columns">
 
             <aside class="float">
@@ -100,9 +100,23 @@
             </aside>
 
         </div>
-        <!-- /clumns -->
+        <!-- /three columns -->
 
         <hr>
+
+        <div class="clearfix large_columns">
+
+            <div class="float col_left">
+                <img src="../assets/img/mountain.svg" alt="">
+            </div>
+
+            <div class="float col_right">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium dolore, aut quam reprehenderit laboriosam veniam, ex ipsa et explicabo facere, in nostrum? Vero, voluptates omnis.</p>
+                <a href="#" id="scopri">Scopri il nostro test</a>
+            </div>
+
+        </div>
 
     </main>
 
