aggiustato link css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Fluentify</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -64,6 +64,7 @@
         <div class="graybar_cont">
             <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
             <p>Solo un corso incentrato sulla fluency può portare ad una soluzione definitiva concreta</p>
+            <p>Get started with FREE tools, and upgrade as you grow</p>
         </div>
         
     </section>
